--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     /**
      * The application's namespace, used by Sencha Command to generate classes
      */
-    "name": "iCorsi",
+    "name": "MoodleMobApp",
 
     /**
      * The file path to this application's front HTML document, relative to this app.json file
