Added the config.xml file to the build

--- a/app.json
+++ b/app.json
@@ -103,6 +103,7 @@
      * Extra resources to be copied along when build
      */
     "resources": [
+        "config.xml",
         "js",
         "resources/images"
     ],
