Add supsi template to the builds

--- a/app.json
+++ b/app.json
@@ -105,7 +105,8 @@
     "resources": [
         "config.xml",
         "js",
-        "resources/images"
+        "resources/images",
+        "extensions/supsi/template"
     ],
 
     /**
